<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9F8"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twelve"
            android:layout_marginRight="@dimen/twelve"
            android:layout_marginTop="@dimen/five"
            android:paddingBottom="@dimen/twelve">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="127dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/background"
                android:scaleX="1.5"
                android:src="@drawable/book_image" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:layout_centerHorizontal="true"
                android:fontFamily="serif"
                android:text="@string/store_name"
                android:textAllCaps="true"
                android:textColor="@color/store_name"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:fontFamily="serif"
                android:text="@string/quote"
                android:textColor="@color/quote_color" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="casual"
                    android:text="@string/categories"
                    android:textAllCaps="true"
                    android:textColor="@color/topic" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginTop="@dimen/ten"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ten">

                        <ImageView
                            android:id="@+id/tick1"
                            android:layout_width="@dimen/fifteen"
                            android:layout_height="@dimen/twenty"
                            android:layout_marginEnd="@dimen/five"

                            android:src="@drawable/tick" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/tick1"
                            android:text="@string/science"
                            android:textColor="@color/store_name" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ten">

                        <ImageView
                            android:id="@+id/tick2"
                            android:layout_width="@dimen/fifteen"
                            android:layout_height="@dimen/twenty"
                            android:layout_marginEnd="@dimen/five"
                            android:src="@drawable/tick" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/tick2"
                            android:text="@string/satire"
                            android:textColor="@color/store_name" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ten">

                        <ImageView
                            android:id="@+id/tick3"
                            android:layout_width="@dimen/fifteen"
                            android:layout_height="@dimen/twenty"
                            android:layout_marginEnd="@dimen/five"
                            android:src="@drawable/tick" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/tick3"
                            android:text="@string/action"
                            android:textColor="@color/store_name" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ten">

                        <ImageView
                            android:id="@+id/tick4"
                            android:layout_width="@dimen/fifteen"
                            android:layout_height="@dimen/twenty"
                            android:layout_marginEnd="@dimen/five"
                            android:src="@drawable/tick" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/tick4"
                            android:text="@string/mystery"
                            android:textColor="@color/store_name" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ten">

                        <ImageView
                            android:id="@+id/tick5"
                            android:layout_width="@dimen/fifteen"
                            android:layout_height="@dimen/twenty"
                            android:layout_marginEnd="@dimen/five"
                            android:src="@drawable/tick" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/tick5"
                            android:text="@string/horror"
                            android:textColor="@color/store_name" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:textColor="@color/store_name" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="200dp"
                android:layout_marginStart="@dimen/ten"
                android:background="@color/background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/ten"
                android:orientation="vertical">

                <TextView
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="casual"
                    android:text="@string/exclusive"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/topic" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/ten"
                    android:layout_marginStart="@dimen/twenty"
                    android:layout_marginTop="@dimen/ten">

                    <ImageView
                        android:id="@+id/round1"
                        android:layout_width="@dimen/twenty"
                        android:layout_height="@dimen/twenty"
                        android:layout_marginEnd="@dimen/five"
                        android:src="@drawable/scholar_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:layout_toEndOf="@id/round1"
                        android:text="@string/school"
                        android:textColor="@color/store_name" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/ten"
                    android:layout_marginStart="@dimen/twenty">

                    <ImageView
                        android:id="@+id/round2"
                        android:layout_width="@dimen/twenty"
                        android:layout_height="@dimen/twenty"
                        android:layout_marginEnd="@dimen/five"
                        android:src="@drawable/scholar_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/round2"
                        android:text="@string/engineering"
                        android:textColor="@color/store_name" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/ten"
                    android:layout_marginStart="@dimen/twenty">

                    <ImageView
                        android:id="@+id/round3"
                        android:layout_width="@dimen/twenty"
                        android:layout_height="@dimen/twenty"
                        android:layout_marginEnd="@dimen/five"
                        android:src="@drawable/scholar_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/round3"
                        android:text="@string/research"
                        android:textColor="@color/store_name" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/ten"
                    android:layout_marginStart="@dimen/twenty">

                    <ImageView
                        android:id="@+id/round4"
                        android:layout_width="@dimen/twenty"
                        android:layout_height="@dimen/twenty"
                        android:layout_marginEnd="@dimen/five"
                        android:src="@drawable/scholar_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/round4"
                        android:text="@string/placements"
                        android:textColor="@color/store_name" />

                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twelve"
            android:layout_marginTop="@dimen/twelve">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timing"
                android:textAllCaps="true"
                android:textColor="@color/topic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fifteen"
                android:text="@string/hour"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twelve"
            android:layout_marginTop="@dimen/ten">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAllCaps="true"
                android:textColor="@color/topic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/five"
                android:text="@string/place"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ten">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/five"
                android:autoLink="email"
                android:text="@string/gmail"
                android:textColorLink="@color/text_link" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ten">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watsapp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/five"
                android:autoLink="phone"
                android:text="@string/number"
                android:textColorLink="@color/text_link" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>